syntax = "proto3";

package vitepb;

message AccountMeta {
    bytes accountId = 1;
    repeated AccountSimpleToken tokenList = 2;
}

message AccountSimpleToken {
    bytes tokenId = 1;
    bytes lastAccountBlockHeight = 2;
}