syntax = "proto3";

package vitepb;

import "vitepb/account_block_db.proto";

message AccountBlockNet {
    AccountBlockMeta meta = 1;
    bytes accountAddress = 2;
    bytes publicKey = 3;

    bytes to = 4;
    bytes prevHash = 5;
    bytes fromHash = 6;

    bytes hash = 7;

    bytes tokenId = 8;
    bytes amount = 9;
    bytes balance = 10;

    string data = 11;
    bytes snapshotTimestamp = 12;

    uint64 timestamp = 13;

    bytes signature = 14;

    bytes nounce = 15;

    bytes difficulty = 16;

    bytes fAmount = 17;
}

message AccountBlockListNet {
    repeated AccountBlockNet blocks = 1;
}